added a new page

--- a/page2.html
+++ b/page2.html
@@ -40,6 +40,7 @@
      <p>Drewsburry</p>
     </div>
     </div> 
+    <br>
 
     <div class="Fot">
      <img src="./Assets/images/Rectangle.png">
@@ -53,10 +54,27 @@
 
     <div class="Tab" >
         <div>
-            <p>Details</p>
+            <h4>Details</h4>
         </div>
-        <div class="Table">
+        <div class="Details">
+           <div id="car">
+               <p>4</p>
+           </div>
+           <div id="two">
+              <p>2</p>
+           </div>
+           <div id="next">
+              <p>2</p>
+           </div>
+           <div id="calender">
+               <p>2007</p>
+           </div>
+           </div>
+
+
+
            
+           </div>
         </div>
 
     </div>
