--- a/page2.html
+++ b/page2.html
@@ -71,9 +71,14 @@
            </div>
            </div>
 
+           <div class="Des">
+           <h3>Description</h3>
+           <p></p>
+           </div>
 
 
-           
+
+
            </div>
         </div>
 
