--- a/page2.html
+++ b/page2.html
@@ -73,7 +73,7 @@
 
            <div class="Des">
            <h3>Description</h3>
-           <p></p>
+           <p>At vero eos et iusto dignisimos</p>
            </div>
 
 
