modified the page

--- a/page2.html
+++ b/page2.html
@@ -70,11 +70,19 @@
                <p>2007</p>
            </div>
            </div>
+    </div>
 
            <div class="Des">
            <h3>Description</h3>
-           <p>At vero eos et iusto dignisimos</p>
+           <p>At vero eos et iusto dignisimos ducimus,qui haec putat,ut ipsi auctori huius disciplinae placet;<br>constituam,quid sit numeranda nec me ab illo inventore veritatis et expedita distinctio nam libero tempore,<br>cum memoriter,turn etiam ac ratione.
+            Si sine metu degendae praesidia firmissima filium morte multavit si sine causa? quae fuerit causa,mox<br> videro;interea tenebo,si ob rem voluptas assumenda est,quid sit extremum et inter mediocrem<br> animad atque natum sit,natura incorrupte.
+            Omne animal,simul atque in sanguinem suum tam inportuno tamque crudeli;sin ut earum mots et accusamus et argumentadum et dolore suo sanciret militaris imperii disciplinam exerrcitumque in liberos<br> atque haec ratio lat in quo pertineant non possim</p>
            </div>
+
+           <di class="Fea" >
+            let text = "Air Conditioning";
+            let result = text.repeat(16);
+           </di>
 
 
 
