new pages added

--- a/page2.html
+++ b/page2.html
@@ -79,10 +79,33 @@
             Omne animal,simul atque in sanguinem suum tam inportuno tamque crudeli;sin ut earum mots et accusamus et argumentadum et dolore suo sanciret militaris imperii disciplinam exerrcitumque in liberos<br> atque haec ratio lat in quo pertineant non possim</p>
            </div>
 
-           <di class="Fea" >
+           <div class="Fea" >
             let text = "Air Conditioning";
             let result = text.repeat(16);
-           </di>
+           </div>
+
+           <div class="Sim" >
+               <h4>Similar Listings</h4>
+               <div id="Ten">
+               <img src="./Assets/images/Rectangle-7.png">
+               <h2>Malto House</h2>
+               </div>
+               <div id="Eleven">
+                <img src="./Assets/images/Rectangle-8.png">
+                <h2>Malto House</h2>
+                </div>
+                <div id="Twelve">
+                    <img src="./Assets/images/Rectangle-9.png">
+                    <h2>Malto House</h2>
+                    </div>
+                    <div id="Nine">
+                        <img src="./Assets/images/Rectangle-10.png">
+                        <h2>Malto House</h2>
+                        </div>
+
+           </div>
+
+           
 
 
 
