change color of landing page

--- a/page2.html
+++ b/page2.html
@@ -55,6 +55,8 @@
               <label for="interest"><b></b></label>
               <input type="interest" placeholder="Hello,I am interested in " name="interest" required><br>
 
+              <button>Learn More</button>
+
             </div>
             
     </div>
