change background color of navbar items

--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
         <a href="#">New Link</a>
         <a href="#">New Link</a>
         <a href="#">New Link</a>
-        <button>Work with Us</button>
+        <a href="#"><button>Work with Us</button></a>
         
     </ul>
      </div> 
