--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <a href="#">Home</a>
             <a href="#">About Us</a>
-            <a href="#">Movers</a>
+            <a href="./page2.html">Movers</a>
             <a href="#">Contact Us</a>
             <a href="#">Login</a>
             <a href="#">Login</a>
