pages linked properly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header > 
         <ul>
-            <a href="#">Home</a>
+            <a href="./page2.html">Home</a>
             <a href="#">About Us</a>
             <a href="./page2.html">Movers</a>
             <a href="#">Contact Us</a>
