--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
  <header>
      <div class="Items">
     <ul>
-        <a href="./index.html">Home</a>
+        <a href="#">Home</a>
         <a href="#">New Link</a>
         <a href="#">New Link</a>
         <a href="#"><button>Work with Us</button></a>
