--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
         <a href="#">Home</a>
         <a href="#">New Link</a>
         <a href="#">New Link</a>
-        <a href="#"><button>Work with Us</button></a>
+        <a href="#"><button>Work with Us</button><span>&#8594</span></a>
         
     </ul>
      </div> 
@@ -55,7 +55,7 @@
               <label for="interest"><b></b></label>
               <input type="interest" placeholder="Hello,I am interested in " name="interest" required><br>
 
-              <button>Learn More</button>
+              <button>Learn More</button><span>&#8594</span>
 
             </div>
             
