--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  text="text/css" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/7f897c6bd5.js" crossorigin="anonymous"></script>
     <title></title>
 </head>
 <body>
@@ -59,14 +60,25 @@
          <div id="Chapchap">
          <img src="./Assets/images/chapchap 1.png">
          <p>Movers Chapchap</p>
-         </div>
+         <span><i class="fa fa-car"></i>4</span>
+         <span><i class="fa fa-bath"></i>4</span>
+         <span><i class="fa fa-location"></i>4</span>
+        </div>
          <div id="Songa">
          <img src="./Assets/images/mashinani 1.png">
          <p>Songa Mashinani</p>
+         <span><i class="fa fa-car"></i>4</span>
+         <span><i class="fa fa-bath"></i>4</span>
+         <span><i class="fa fa-location"></i>4</span>
+
          </div>
          <div id="Upesi" >
          <img src="./Assets/images/songa 1.png">
          <p>Upesi Logistics</p>
+         <span><i class="fa fa-car"></i>4</span>
+         <span><i class="fa fa-bath"></i>4</span>
+         <span><i class="fa fa-location"></i>4</span>
+
          </div>
          </div>
          <!--end of movers-->
