--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  type="text/css" href="style2.css">
+    <script src="https://kit.fontawesome.com/7f897c6bd5.js" crossorigin="anonymous"></script>
     <title>Page2</title>
 </head>
 <body>
