--- a/index.html
+++ b/index.html
@@ -46,14 +46,23 @@
          <div id="Move">
          <img src="./Assets/images/ehem 1.png" alt="Jump" >
          <p> A+ Movers</p>
+         <span><i class="fa fa-car"></i>4</span>
+         <span><i class="fa fa-bath"></i>4</span>
+         <span><i class="fa fa-location"></i>4</span>
          </div>
          <div id="Mari">
          <img src="./Assets/images/wewe 1.png" alt="mari">
          <p>Maridadi Home Logistics</p>
+         <span><i class="fa fa-car"></i>4</span>
+         <span><i class="fa fa-bath"></i>4</span>
+         <span><i class="fa fa-location"></i>4</span>
          </div>
          <div id="Ufalme">
          <img src="./Assets/images/movers 1.png" alt Ufa>
          <p>Ufalme Movers</p>
+         <span><i class="fa fa-car"></i>4</span>
+         <span><i class="fa fa-bath"></i>4</span>
+         <span><i class="fa fa-location"></i>4</span>
          </div>
          </div>
          <div class="Mar">
