--- a/page2.html
+++ b/page2.html
@@ -77,7 +77,9 @@
     </div>
     
        <div class="Tab" >
+         <div id="fiv">
           <h2>Details</h2>
+         </div>
           <div class="Evr">
            <span><i class="fa fa-car"></i>4</span>
            <span><i class="fa fa-bath"></i>4</span>
@@ -96,33 +98,33 @@
            </div>
 
            <div class="Fea" >
-            <div id="onene">
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
+            <div class="onene">
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
             </div>
             <div id="To">
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
             </div>
             <div id="Ora">
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
             </div>
             <div id="Air">
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
-              <p>Air conditioning</p>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
+              <li><i class="fa-solid fa-circle-check"></i>Air conditioning</li>
             </div>
            </div>
 
@@ -198,8 +200,11 @@
           </div>
 
           <div class="media">
-            <a href="#" class="fa fa-facebook"></a>
-
+            <div class="fb">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            </div>
           </div>
           
 
